# audiovisuals

./: .gitignore  AGENTS.md  PHASE_3_COMPLETE.md  PHASE_3_INSTALLATION_COMPLETE.md  PHASE_3_READY.md  PHASE_A_SUMMARY.md  PHASE_B_COMPLETE_FINAL_REPORT.md  PHASE_B_QA_COMPLETE.md  START_HERE.md  WEEK_3_4_COMPLETE_SUMMARY.txt  WEEK_3_4_EXECUTIVE_SUMMARY.md
.cursor/plans/: cppn-audio-visualizer-poc-f0611ed9.plan.md
Code/backend/: AGENTS.md  EXPLORATION_SUMMARY.md  PARAMETER_EXPLORATION_GUIDE.md  PROJECT_STATUS.md  QUICK_START_AITOR.md  QUICK_TESTS.md  README.md  SETUP_CLIP.md  audio_analyzer.py  audio_reactive_vqgan.py  cli.py  clip_optimize_cppn.py  cppn.py  renderer.py  requirements.txt  test_video_embed.html  video_encoder.py
Code/desktop/: AGENTS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_READY.md  QUICK_START_NEXT.md  README.md  README_PREPARE.md  README_WEEK_2.md  SETUP_COMPLETE.md  WEEK_1_COMPLETE.md  WEEK_1_SETUP.md  WEEK_2_CHECKLIST.md  WEEK_2_RESULTS.md  WEEK_3_4_COMPLETE.md  WEEK_3_4_FINAL_SUMMARY.md  WEEK_3_4_IMPLEMENTATION_SUMMARY.md  WEEK_3_4_PLAN.md  index.html  package.json  vite.config.ts
Code/desktop/src-tauri/: Cargo.toml  tauri.conf.json
Code/desktop/src-tauri/icons/: icon.icns
Code/desktop/src-tauri/src/: commands.rs  file_manager.rs  lib.rs  main.rs  python.rs  storage.rs  styles.rs
docs/: COSMIC_GALAXY_GENERATION.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  PHASE_C_COMPLETE.md  PHASE_C_QUICK_SUMMARY.md  PHASE_TRANSITION_SUMMARY.md  README.md  README_PHASE_C.md  TONIGHT_SUMMARY.md
docs/Audio/: CLIP_OPTIMIZATION_RESULTS.html  README.md  (+5 more)
(+165 files in other folders)
